--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -1,5 +1,7 @@
 .container {
-  max-width: 42rem;
   margin: 0 auto;
   padding: 2rem 1.25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
