--- a/components/RestaurantResearchForm.module.css
+++ b/components/RestaurantResearchForm.module.css
@@ -1,8 +1,7 @@
 .container {
   padding: 3rem;
   margin-top: 2rem;
-  /* border: 1px solid black;
-  border-radius: 15px; */
+  max-width: 42rem;
 }
 
 .sliderContainer {
