--- a/components/BusinessResearchForm.module.css
+++ b/components/BusinessResearchForm.module.css
@@ -5,12 +5,8 @@
 }
 
 .sliderContainer,
-.priceTypes {
-  margin: 1rem 0;
-}
-
-.priceTypes > span {
-  margin-right: 1rem;
+.priceTypes > div {
+  margin: 0.5rem 0;
 }
 
 .sliderContainer > span:first-child,
@@ -22,5 +18,22 @@
 .InputsContainer {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    padding: 1rem;
+  }
+
+  .InputsContainer {
+    flex-direction: column;
+  }
+  .priceTypes {
+    display: flex;
+    flex-direction: column;
+    margin: 1.5rem 0;
+  }
+  .sliderContainer {
+    margin: 0;
+  }
 }
