--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -4,3 +4,12 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
+
+@media screen and (max-width: 500px) {
+  .businessesContainer {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    margin: 5rem 0;
+  }
+}
